Base OpenAPI for Warehouse Service
