# warranty-service/src/main/kotlin/ru/romanow/services/warranty/domain/Warranty.kt
@@ -8,7 +8,6 @@ import org.springframework.data.annotation.CreatedDate
 import org.springframework.data.annotation.LastModifiedBy
 import org.springframework.data.annotation.LastModifiedDate
 import org.springframework.data.jpa.domain.support.AuditingEntityListener
-import ru.romanow.services.warranty.model.WarrantyStatus
 import java.time.LocalDateTime
 import java.util.*
 
@@ -24,15 +23,11 @@ data class Warranty(
     @Column(name = "order_uid", nullable = false)
     var orderUid: UUID? = null,
 
-    @Column(name = "name", nullable = false)
-    var name: String? = null,
+    @OneToMany(mappedBy = "warranty", fetch = FetchType.LAZY)
+    var items: List<WarrantyItem>? = null,
 
-    @Column(name = "comment")
-    var comment: String? = null,
-
-    @Enumerated(EnumType.STRING)
-    @Column(name = "status", nullable = false)
-    var status: WarrantyStatus? = null,
+    @Column(name = "active", nullable = false)
+    var active: Boolean? = null,
 
     @CreatedDate
     @Column(name = "created_date", nullable = false)
@@ -52,20 +47,15 @@ data class Warranty(
 
         other as Warranty
 
-        if (orderUid != other.orderUid) return false
-        if (name != other.name) return false
-
-        return true
+        return orderUid == other.orderUid
     }
 
     override fun hashCode(): Int {
-        var result = orderUid?.hashCode() ?: 0
-        result = 31 * result + (name?.hashCode() ?: 0)
-        return result
+        return orderUid?.hashCode() ?: 0
     }
 
     override fun toString(): String {
-        return "Warranty(id=$id, orderUid=$orderUid, name=$name, comment=$comment, status=$status, " +
+        return "Warranty(id=$id, orderUid=$orderUid, active=$active, " +
             "createdDate=$createdDate, modifiedDate=$modifiedDate, modifiedUser=$modifiedUser)"
     }
 }
